--- a/redditCloneBackend/src/main/resources/application.properties
+++ b/redditCloneBackend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# DB
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/reddit_clone
+spring.datasource.username=root
+spring.datasource.password=zaq1@WSX
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
