--- a/redditCloneBackend/src/main/resources/application.properties
+++ b/redditCloneBackend/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/reddit_clone
 spring.datasource.username=root
 spring.datasource.password=zaq1@WSX
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
