--- a/redditCloneBackend/src/main/resources/application.properties
+++ b/redditCloneBackend/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.mail.username=67da34b1beabbd
 spring.mail.password=42d04550bb7935
 spring.mail.protocol=smtp
 
+# JWT Properties
+jwt.expiration.time=900000
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
