Enabled JWT bearer oauth2 and added Subreddit API

--- a/redditCloneBackend/src/main/resources/application.properties
+++ b/redditCloneBackend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Mail Properties
+# Mail Properties votis72646@bitofee.com
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=67da34b1beabbd
