Implemented API to manage Votes

--- a/redditCloneBackend/src/main/resources/application.properties
+++ b/redditCloneBackend/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.mail.protocol=smtp
 jwt.expiration.time=900000
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
+
+server.error.include-message = always
