--- a/redditCloneFrontend/package.json
+++ b/redditCloneFrontend/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.1.3",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "ngx-toastr": "^18.0.0",
     "ngx-webstorage": "^13.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
