--- a/redditCloneFrontend/package.json
+++ b/redditCloneFrontend/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "ngx-toastr": "^18.0.0",
