--- a/redditCloneFrontend/package.json
+++ b/redditCloneFrontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "ngx-toastr": "^18.0.0",
