--- a/redditCloneFrontend/package.json
+++ b/redditCloneFrontend/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
     "@tinymce/tinymce-angular": "^7.0.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
@@ -37,6 +39,7 @@
     "@angular-devkit/build-angular": "^17.1.3",
     "@angular/cli": "^17.1.3",
     "@angular/compiler-cli": "^17.1.0",
+    "@angular/localize": "^17.1.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
